EXTENDED: create sns with fifo and content based deduplication attributes

--- a/views/sns/sns-create-topic.hbs
+++ b/views/sns/sns-create-topic.hbs
@@ -7,6 +7,19 @@
     <input type="text" class="form-control" id="name" name="name">
   </div>
 
+  <div class="ms-3 form-check">
+    <input class="form-check-input" type="checkbox" id="fifoTopic" name="fifoTopic" value="true" />
+    <label class="form-check-label" for="fifoTopic">
+      Fifo Topic
+    </label>
+  </div>
+  <div class="ms-3 form-check">
+    <input class="form-check-input" type="checkbox" id="contentBasedDeduplication" name="contentBasedDeduplication" value="true" />
+    <label class="form-check-label" for="contentBasedDeduplication">
+      Content Based Deduplication
+    </label>
+  </div>
+
 
   <div class="col-12" id="tags-section">
     <div class="d-flex">
