--- a/views/ec2/ec2-instance-detail.hbs
+++ b/views/ec2/ec2-instance-detail.hbs
@@ -1,4 +1,19 @@
 
-<h2>Instance Details</h2>
+<h2>Instance Details - {{instanceId}} - <span class="badge rounded-pill bg-{{lookup instanceStateColorMapping instance.State.Name}} text-capitalize">{{instance.State.Name}}</span></h2>
 
-<pre>{{json instance 2}}</pre>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each instance}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
