--- a/views/event-bridge/event-bridge-archive-details.hbs
+++ b/views/event-bridge/event-bridge-archive-details.hbs
@@ -1,9 +1,26 @@
 
 <h2>Archive - {{archiveName}}</h2>
 
+<h4 class="mt-2">Details</h4>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each details}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
+
 <h4>Start Replay</h4>
 <form method="post" action="/event-bridge/start-replay">
-
     <input type="text" name="archiveName" value="{{archiveName}}" style="display: none;" />
 
     
@@ -24,7 +41,3 @@
     <button class="btn btn-outline-secondary" type="reset">Reset</button>
     <button class="btn btn-outline-success" type="submit">Create</button>
 </form>
-
-
-<h4 class="mt-2">Details</h4>
-<pre>{{json details 2}}</pre>
