--- a/views/event-bridge/rule-details.hbs
+++ b/views/event-bridge/rule-details.hbs
@@ -21,7 +21,22 @@
 </form>
 
 <h4 class="mb-2">Details:</h4>
-<pre>{{json details 2}}</pre>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each details}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 
 <h4>Rule Targets:</h4>
 <table class="table">
