--- a/views/gateway/gateway-details.hbs
+++ b/views/gateway/gateway-details.hbs
@@ -1,8 +1,24 @@
 <h2>Rest Api Details - {{details.name}}</h2>
 
-<pre>{{json details 2}}</pre>
+<h4 class="mt-2">Details:</h4>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each details}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 
-<h5>Invoke URLs</h5>
+<h5>Invoke URLs:</h5>
 <p>http://localhost:4566/restapis/<strong class="text-primary">{{id}}</strong>/<strong class="text-success">[STAGE]</strong>/_user_request_/<strong class="text-danger">[PATH]</strong></p>
 <p>http://<strong class="text-primary">{{id}}</strong>.execute-api.localhost.localstack.cloud:4566/<strong class="text-success">[STAGE]</strong>/<strong class="text-danger">[PATH]</strong></p>
 
