--- a/views/gateway/gateway-usage-plan-details.hbs
+++ b/views/gateway/gateway-usage-plan-details.hbs
@@ -2,7 +2,22 @@
 <h2>Usage Plan - {{usagePlanId}}</h2>
 
 <h4>Details:</h4>
-<pre>{{json details 2}}</pre>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each details}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 
 
 <h4>Create Api Key</h4>
