--- a/views/iam/iam-role-details.hbs
+++ b/views/iam/iam-role-details.hbs
@@ -4,4 +4,19 @@
 <a href="/iam/delete-role?roleName={{roleName}}" role="button" class="btn btn-outline-danger">Delete</a>
 
 <h4>Details:</h4>
-<pre>{{json Role 2}}</pre>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each Role}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
