--- a/views/s3/s3-object-detail.hbs
+++ b/views/s3/s3-object-detail.hbs
@@ -8,8 +8,23 @@
 <h4 class="mt-2">S3 Pointer</h4>
 <p>{{bucket}}/{{key}}</p>
 
-<h4>Attributes</h4>
-<pre>{{json attributes 2}}</pre>
+<h4>Details</h4>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each attributes}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 
 
 <h4>Update Object</h4>
