--- a/views/secrets-manager/secrets-manager-item.hbs
+++ b/views/secrets-manager/secrets-manager-item.hbs
@@ -4,5 +4,19 @@
 <a role="button" href="/secrets-manager/remove?secretId={{secretId}}" class="btn btn-outline-danger">Delete</a>
 
 <h4 class="mt-2">Details:</h4>
-<pre>{{json details 2}}</pre>
-
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each details}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
