--- a/views/sns/sns-topic-detail.hbs
+++ b/views/sns/sns-topic-detail.hbs
@@ -33,7 +33,22 @@
 
 {{#ifEq tab 'details'}}
 <h4 class="mt-2">Details:</h4>
-<pre>{{json Attributes 2}}</pre>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each Attributes}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 {{/ifEq}}
 
 
