--- a/views/ssm/ssm-parameter-detail.hbs
+++ b/views/ssm/ssm-parameter-detail.hbs
@@ -16,7 +16,22 @@
 </form>
 
 <h4 class="mt-2">Details:</h4>
-<pre>{{json details 2}}</pre>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Attribute</th>
+            <th scope="col">Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each details}}
+        <tr>
+            <th>{{@key}}</th>
+            <td>{{{printKeyValue this}}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 
 <h4 class="mt-2">History:</h4>
 <table class="table">
