ADDED: purge s3 bucket object feature

--- a/views/s3/s3-bucket-detail.hbs
+++ b/views/s3/s3-bucket-detail.hbs
@@ -1,6 +1,7 @@
 
 <h2>Bucket Details - {{name}}</h2>
 
+<a href="/s3/purge-bucket?bucket={{name}}" role="button" class="btn btn-outline-danger" >Purge Bucket</a>
 <a href="/s3/bucket-policy?bucket={{name}}" role="button" class="btn btn-outline-primary" >Bucket Policy</a>
 <a href="/s3/bucket-versioning?bucket={{name}}" role="button" class="btn btn-outline-primary" >Bucket Versioning</a>
 <a href="/s3/bucket-cors?bucket={{name}}" role="button" class="btn btn-outline-primary" >Bucket Cors</a>
