ADDED: link to configure application. FIXED: hardcoded port number.

--- a/views/root.hbs
+++ b/views/root.hbs
@@ -5,6 +5,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">{{hero.details}}</p>
     </div>
+    <p class="lead">Click <a class="link-primary text-decoration-none" href="{{configureLink}}">here</a> to change configuration.</p>
   </div>
 
   <div class="container px-4 py-5">
